arrumando o relacionamento de usuarioSistema com role, alterando o usuarioRepository, refatorando o método loadUserByUsername no UsuarioSistemaService, alterando temporariamente o securityConfig para não validar as senhas criptografadas